aligned top nav for mobile correctly

--- a/css/index.css
+++ b/css/index.css
@@ -388,4 +388,49 @@ footer{width:350px;
     width: 537px;
     justify-content: center;
 }
+
+}
+@media(max-width:500px){
+    .header{
+        width:500px;
+        flex-direction:column;
+        justify-content:center;
     }
+nav{
+    display:flex;
+    flex-direction:column;
+    justify-content:space-evenly;
+    width:500px;
+    align-items:center;
+    z-index: none;
+    margin:auto;
+    text-align:center;
+    margin-bottom:30px;
+    position:absolute;
+}
+    #splash{
+        margin-top:230px;
+    }
+
+    .logo{
+        order: 1;
+        margin: auto;
+        position: unset;
+        right: unset;
+        padding-left: 160px;
+        padding-right: none;
+        margin-bottom: 40px;
+    }
+
+
+
+
+
+}
+
+
+
+
+
+
+
